--- a/index.html
+++ b/index.html
@@ -104,17 +104,31 @@
         <article class="c-grid" data-grid="card">
           <div class="c-card js-intersector">
             <div class="c-card_content">
-              <h1 class="c-card_caption-title">Estratégia y consultoría</h1>
+              <h1 class="c-card_caption-title" style="margin-left: 1.5rem">Diseño</h1>
               <figcaption class="c-card_caption">
-                <p class="c-card_description">Trabajo cercano con el cliente para realizar análisis y definir diagnostico y plan de acción.</p><a class="c-btn js-link" data-position="absolute" href="mailto:harley.santos.garzon@gmail.com">hablemos</a>
+                <blockquote class="c-card_description">Comunicación para diferentes medios impresos o digitales:<br/><br/>
+                  <p>Campañas • afiches • flyers • pendones • brochure • vallas • tripticos • soportes gráficos para internet y redes sociales.</p>
+                </blockquote><a class="c-btn js-link" data-position="absolute" href="mailto:harley.santos.garzon@gmail.com">hablemos</a>
               </figcaption>
             </div>
           </div>
           <figure class="c-card js-intersector">
             <div class="c-card_content">
-              <h1 class="c-card_caption-title">Diseño y desarrollo</h1>
+              <h1 class="c-card_caption-title" style="margin-left: 1.5rem">Desarrollo</h1>
               <figcaption class="c-card_caption">
-                <p class="c-card_description">Resolver las necesidades tanto en el diseño, desarrollo y consultoría de la mano con e cliente.</p><a class="c-btn js-link" data-position="absolute" href="mailto:angela.bohorquez.ramos@gmail.com">hablemos</a>
+                <blockquote class="c-card_description">
+                  <p>Herramientas y tecnologías actuales para dar soluciones acordes a sus necesidades.<br/><br/>Resolver las necesidades desarrollo y consultoría de la mano con el cliente.</p>
+                </blockquote><a class="c-btn js-link" data-position="absolute" href="mailto:angela.bohorquez.ramos@gmail.com">hablemos</a>
+              </figcaption>
+            </div>
+          </figure>
+          <figure class="c-card js-intersector">
+            <div class="c-card_content">
+              <h1 class="c-card_caption-title" style="margin-left: 1.5rem">Branding</h1>
+              <figcaption class="c-card_caption">
+                <blockquote class="c-card_description">Diseño y estratégias de marca<br/>Resolver las necesidades en:<br/><br/>
+                  <p> Naming • Logotipos e Isotipos • Identidad Corporativa • Conceptos de Marca • Estrategia de Marcas • Arquitectura de Marcas • Posicionamientos.</p>
+                </blockquote><a class="c-btn js-link" data-position="absolute" href="mailto:angela.bohorquez.ramos@gmail.com">hablemos</a>
               </figcaption>
             </div>
           </figure>
