update: #v6.7 - tag a en slider

--- a/index.html
+++ b/index.html
@@ -71,20 +71,16 @@
         <div class="o-wrapper js-scrollUp">
           <div class="blog-slider js-intersector">
             <div class="blog-slider__wrp swiper-wrapper">
-              <div class="blog-slider__item swiper-slide">
-                <div class="blog-slider__img"><img src="./images/projects/slider/1.jpg" alt=""/></div>
+              <div class="blog-slider__item swiper-slide"><a class="blog-slider__img" href="orca.html"><img src="./images/projects/slider/1.jpg" alt=""/></a>
                 <div class="blog-slider__content"><a class="blog-slider__button js-link js-mouseStatus" href="orca.html">Conoce Orca</a></div>
               </div>
-              <div class="blog-slider__item swiper-slide">
-                <div class="blog-slider__img"><img src="./images/projects/slider/2.jpg" alt=""/></div>
+              <div class="blog-slider__item swiper-slide"><a class="blog-slider__img" href="origen.html"><img src="./images/projects/slider/2.jpg" alt=""/></a>
                 <div class="blog-slider__content"><a class="blog-slider__button js-link js-mouseStatus" href="origen.html">Conoce Origen</a></div>
               </div>
-              <div class="blog-slider__item swiper-slide">
-                <div class="blog-slider__img"><img src="./images/projects/slider/4.jpg" alt=""/></div>
+              <div class="blog-slider__item swiper-slide"><a class="blog-slider__img" href="betsknate.html"><img src="./images/projects/slider/4.jpg" alt=""/></a>
                 <div class="blog-slider__content"><a class="blog-slider__button js-link js-mouseStatus" href="betsknate.html">Conoce Betsknate</a></div>
               </div>
-              <div class="blog-slider__item swiper-slide">
-                <div class="blog-slider__img"><img src="./images/projects/slider/3.jpg" alt=""/></div>
+              <div class="blog-slider__item swiper-slide"><a class="blog-slider__img" href="valientes.html"><img src="./images/projects/slider/3.jpg" alt=""/></a>
                 <div class="blog-slider__content"><a class="blog-slider__button js-link js-mouseStatus" href="valientes.html">Conoce Valientes</a></div>
               </div>
             </div>
